<resources>
    <string name="app_name">NoteListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_note">Add New Note!</string>
    <string name="enter_the_title">Title</string>
    <string name="enter_the_description">Description</string>
    <string name="edit_the_note">Edit the Note</string>
    <string name="editButton">edition</string>
    <string name="addNew"><![CDATA[The note is empty,\nclick + to add new note ->]]></string>
    <string name="note_title">Note Title</string>
    <string name="description">Description</string>
    <string name="no_notes_available">No Notes Available 👻</string>
    <string name="image">image</string>
</resources>