<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue_light"
        tools:context=".UpdateNoteFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:backgroundTint="@color/black"
            android:tintMode="@color/white"
            android:src="@drawable/baseline_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/editButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="20dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/edit_the_note"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:hint="@string/enter_the_title"
            android:padding="12dp"
            android:textSize="20sp"
            android:background="@drawable/border"
            android:textColorHint="@color/black"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_the_description"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/border"
            android:layout_marginTop="12dp"
            android:autofillHints="fh" />



        </LinearLayout>
        </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>